syntax = "proto3";

option go_package = "./pb";

package user;

service UserService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
	string display_name = 1;
	string email = 2;
}

message CreateUserResponse {
	string user_id = 1;
}